--- a/web/src/main/webapp/customer_overview.xhtml
+++ b/web/src/main/webapp/customer_overview.xhtml
@@ -29,7 +29,7 @@
                                 <tbody>
                                 <c:forEach items="#{productJSF.productsBySeller}" var="product" varStatus="metadata">
                                     <tr class="align-middle">
-                                        <td class="align-middle"><a href="customer_product.xhtml" class="font-weight-bold text-decoration-none">#{product.title}</a></td>
+                                        <td class="align-middle"><a href="customer_product.xhtml?id=#{product.id.value}" class="font-weight-bold text-decoration-none">#{product.title}</a></td>
                                         <td class="align-middle">#{product.price}</td>
                                         <td class="align-middle">TODO</td>
                                         <td class="align-middle">TODO</td>
