--- a/web/src/main/webapp/overview.xhtml
+++ b/web/src/main/webapp/overview.xhtml
@@ -10,7 +10,7 @@
         <div class="card">
             <div class="card-header">
                 <br/>
-                <h1>My Products</h1>
+                <h1>Product</h1>
                 <br/>
             </div>
             <div class="card-body">
@@ -29,7 +29,7 @@
                                 <tbody>
                                 <c:forEach items="#{productJSF.productsBySeller}" var="product" varStatus="metadata">
                                     <tr class="align-middle">
-                                        <td class="align-middle"><a href="customer_product.xhtml?id=#{product.id.value}" class="font-weight-bold text-decoration-none">#{product.title}</a></td>
+                                        <td class="align-middle"><a href="product.xhtml?id=#{product.id.value}" class="font-weight-bold text-decoration-none">#{product.title}</a></td>
                                         <td class="align-middle">#{product.price}</td>
                                         <td class="align-middle">TODO</td>
                                         <td class="align-middle">TODO</td>
