--- a/web/src/main/webapp/product.xhtml
+++ b/web/src/main/webapp/product.xhtml
@@ -6,12 +6,17 @@
                 template="/resources/templates/template.xhtml"
                 xml:lang="en" lang="en">
 
+    <c:metadata>
+        <c:viewParam name="id" value="#{productJSF.productId}"/>
+        <c:event listener="#{productJSF.refreshPageProduct(productJSF.productId)}" type="preRenderView"/>
+    </c:metadata>
+
     <ui:define name="content">
         <br/>
         <div class="card">
             <div class="card-header">
                 <br/>
-                <h1>Prepare product for sale</h1>
+                <h1>Product</h1>
                 <br/>
             </div>
             <div class="card-body">
@@ -20,53 +25,55 @@
                         <h:form id="newProductForm" enctype="multipart/form-data">
                             <h:message for="newProductForm" class="text-danger"/>
                             <div class="form-group">
-                                <label for="newTitle">Title</label>
-                                <h:inputText binding="#{newTitleInput}"
+                                <label for="title">Title</label>
+                                <h:inputText binding="#{titleInput}"
                                              class="form-control"
-                                             id="newTitle"
+                                             id="title"
                                              maxlength="255"
                                              required="true"
                                              requiredMessage="#{messageJSF.requiredMassage}"
-                                value="#{}"/>
-                                <h:message for="newTitle" class="text-danger"/>
+                                             value="#{productJSF.product.title}"/>
+                                <h:message for="title" class="text-danger"/>
                             </div>
                             <div class="form-group">
-                                <label for="newDescription">Description</label>
-                                <h:inputTextarea binding="#{newDescriptionInput}"
+                                <label for="description">Description</label>
+                                <h:inputTextarea binding="#{descriptionInput}"
                                                  class="form-control"
-                                                 id="newDescription"
+                                                 id="description"
                                                  rows="5"
-                                                 maxlength="1500"/>
-                                <h:message for="newDescription" class="text-danger"/>
+                                                 maxlength="1500"
+                                                 value="#{productJSF.product.description}"/>
+                                <h:message for="description" class="text-danger"/>
                             </div>
                             <div class="form-group">
-                                <label for="newPrice">Price</label>
-                                <h:inputText binding="#{newPriceInput}"
+                                <label for="price">Price</label>
+                                <h:inputText binding="#{priceInput}"
                                              class="form-control"
-                                             id="newPrice"
+                                             id="price"
                                              type="number"
                                              required="true"
                                              requiredMessage="#{messageJSF.requiredMassage}"
-                                             validatorMessage="#{messageJSF.priceMessage}">
-                                    <c:validateRegex pattern="\d+[\.,]?(\d\d)?" for="newPrice"/>
+                                             validatorMessage="#{messageJSF.priceMessage}"
+                                             value="#{productJSF.product.price}">
+                                    <!-- c:validateRegex pattern="\d+[\.,]?(\d\d)?" for="price"/-->
                                 </h:inputText>
-                                <h:message for="newPrice" class="text-danger"/>
+                                <h:message for="price" class="text-danger"/>
                             </div>
                             <div class="form-group">
-                                <label for="newPhoto">Photo</label>
-                                <h:inputFile binding="#{newPhotoInput}"
+                                <label for="photo">Photo</label>
+                                <h:inputFile binding="#{photoInput}"
                                              class="form-control-file"
-                                             id="newPhoto"
+                                             id="photo"
                                              required="true"
                                              requiredMessage="#{messageJSF.requiredMassage}"/>
-                                <h:message for="newPhoto" class="text-danger"/>
+                                <h:message for="photo" class="text-danger"/>
                             </div>
                             <h:commandButton value="Save" class="btn btn-primary"
-                                             action="#{productJSF.saleNewProduct(
-                                                    newTitleInput.value,
-                                                    newDescriptionInput.value,
-                                                    newPriceInput.value,
-                                                    newPhotoInput.value)}"/>
+                                             action="#{productJSF.save(
+                                                    titleInput.value,
+                                                    descriptionInput.value,
+                                                    priceInput.value,
+                                                    photoInput.value)}"/>
                         </h:form>
                     </div>
                 </div>
