überarbeitung validierung und create product

--- a/web/src/main/webapp/overview.xhtml
+++ b/web/src/main/webapp/overview.xhtml
@@ -43,7 +43,7 @@
                 <br/>
                 <div class="card shadow">
                     <div class="card-body">
-                        <a href="customer_product.xhtml" class="btn btn-primary">New Prodcut</a>
+                        <a href="product.xhtml" class="btn btn-primary">New Prodcut</a>
                     </div>
                 </div>
             </div>
