--- a/web/src/main/webapp/product.xhtml
+++ b/web/src/main/webapp/product.xhtml
@@ -2,6 +2,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:c="http://java.sun.com/jsf/core"
+                xmlns:cc="http://java.sun.com/jsp/jstl/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/resources/templates/template.xhtml"
                 xml:lang="en" lang="en">
@@ -59,15 +60,26 @@
                                 </h:inputText>
                                 <h:message for="price" class="text-danger"/>
                             </div>
-                            <div class="form-group">
-                                <label for="photo">Photo</label>
-                                <h:inputFile binding="#{photoInput}"
-                                             class="form-control-file"
-                                             id="photo"
-                                             required="true"
-                                             requiredMessage="#{messageJSF.requiredMassage}"/>
-                                <h:message for="photo" class="text-danger"/>
-                            </div>
+                            <cc:if test="#{productJSF.productId == 0}">
+                                <div class="form-group">
+                                    <label for="photo">Photo</label>
+                                    <h:inputFile binding="#{photoInput}"
+                                                 class="form-control-file"
+                                                 id="photo"
+                                                 required="true"
+                                                 requiredMessage="#{messageJSF.requiredMassage}"/>
+                                    <h:message for="photo" class="text-danger"/>
+                                </div>
+                            </cc:if>
+                            <cc:if test="#{productJSF.productId != 0}">
+                                <div class="form-group">
+                                    <label for="photo">Photo</label>
+                                    <h:inputFile binding="#{photoInput}"
+                                                 class="form-control-file"
+                                                 id="photo"/>
+                                    <h:message for="photo" class="text-danger"/>
+                                </div>
+                            </cc:if>
                             <h:commandButton value="Save" class="btn btn-primary"
                                              action="#{productJSF.save(
                                                     titleInput.value,
@@ -77,6 +89,15 @@
                         </h:form>
                     </div>
                 </div>
+                <cc:if test="#{productJSF.productId != 0}">
+                <br/>
+                <div class="card shadow">
+                    <div class="card-body">
+                        <p class="card-text">Photo Preview</p>
+                    </div>
+                    <img class="card-img-bottom" src="image?id=#{productJSF.productId}" alt="#{productJSF.product.title}" />
+                </div>
+                </cc:if>
             </div>
         </div>
     </ui:define>
