--- a/web/src/main/webapp/product.xhtml
+++ b/web/src/main/webapp/product.xhtml
@@ -63,6 +63,7 @@
                                 <label for="stock">Stock</label>
                                 <p:inputNumber binding="#{stockInput}"
                                                inputStyleClass="form-control shadow-none"
+                                               styleClass="form-control shadow-none"
                                                id="stock"
                                                minValue="0"
                                                decimalPlaces="0"
