--- a/web/src/main/webapp/overview.xhtml
+++ b/web/src/main/webapp/overview.xhtml
@@ -41,7 +41,8 @@
                                         </td>
                                         <td class="align-middle">#{product.stock}</td>
                                         <td class="align-middle">
-                                            <h:commandButton value="X" class="btn btn-outline-danger" actionListener="#{productJSF.delete(product.id)}"/></td>
+                                            <h:commandButton value="X" class="btn btn-outline-danger" actionListener="#{productJSF.delete(product.id)}"/>
+                                        </td>
                                     </tr>
                                 </cc:forEach>
                                 </tbody>
