--- a/web/src/main/webapp/cart.xhtml
+++ b/web/src/main/webapp/cart.xhtml
@@ -4,6 +4,7 @@
                 xmlns:cc="http://java.sun.com/jsp/jstl/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:c="http://java.sun.com/jsf/core"
+                xmlns:p="http://primefaces.org/ui"
                 template="/resources/templates/template.xhtml"
                 xml:lang="en" lang="en">
     <ui:define name="content">
@@ -29,22 +30,35 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <cc:forEach items="#{productPurchaseJSF.shoppingCart}" var="product" varStatus="metadata">
+                                <cc:forEach items="#{productPurchaseJSF.shoppingCart}" var="product"
+                                            varStatus="metadata">
                                     <tr class="align-middle">
                                         <td class="align-middle">#{product.title}</td>
-                                        <td class="align-middle">#{product.unit}</td>
+                                        <td class="align-middle">
+                                            <p:inputNumber inputStyleClass="shadow-none"
+                                                           inputStyle="text-align: right"
+                                                           id="unit_#{product.id.value}"
+                                                           minValue="1"
+                                                           decimalPlaces="0"
+                                                           required="true"
+                                                           emptyValue="1"
+                                                           requiredMessage="#{messageJSF.requiredMassage}"
+                                                           value="#{product.unit}">
+                                            </p:inputNumber>
+                                        </td>
                                         <td class="align-middle">
                                             <h:outputText value="#{product.unitprice}">
                                                 <c:convertNumber minFractionDigits="2"/>
                                             </h:outputText>
                                         </td>
                                         <td class="align-middle">
-                                            <h:outputText value="#{product.totalPrice}">
+                                            <h:outputText it="totalprice" value="#{product.totalPrice}">
                                                 <c:convertNumber minFractionDigits="2"/>
                                             </h:outputText>
                                         </td>
                                         <td>
-                                            <h:commandButton value="X" class="btn btn-outline-danger" actionListener="#{productPurchaseJSF.removeFromShoppingCart(product.productId)}"/>
+                                            <h:commandButton value="X" class="btn btn-outline-danger"
+                                                             actionListener="#{productPurchaseJSF.removeFromShoppingCart(product.id)}"/>
                                         </td>
                                     </tr>
                                 </cc:forEach>
