--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
         <hr/>
         <div class="card-columns">
             <h:form>
-                <cc:forEach items="#{productJSF.all}" var="product" varStatus="metadata">
+                <cc:forEach items="#{productJSF.allAvailableProducts}" var="product" varStatus="metadata">
                     <div class="card">
                         <img class="card-img-top" src="image?id=#{product.id.value}" alt="#{product.title}"/>
                         <div class="card-body">
