--- a/web/src/main/webapp/cart.xhtml
+++ b/web/src/main/webapp/cart.xhtml
@@ -4,7 +4,6 @@
                 xmlns:cc="http://java.sun.com/jsp/jstl/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:c="http://java.sun.com/jsf/core"
-                xmlns:p="http://primefaces.org/ui"
                 template="/resources/templates/template.xhtml"
                 xml:lang="en" lang="en">
     <ui:define name="content">
@@ -23,40 +22,37 @@
                                 <thead>
                                 <tr>
                                     <th scope="col">Title</th>
-                                    <th scope="col">Unit</th>
-                                    <th scope="col">Unitprice</th>
-                                    <th scope="col">Total</th>
-                                    <th scope="col">#</th>
+                                    <th scope="col" class="text-center">Unit</th>
+                                    <th scope="col" class="text-center">Unitprice</th>
+                                    <th scope="col" class="text-center">Total</th>
+                                    <th scope="col" class="text-center">#</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <cc:forEach items="#{productPurchaseJSF.shoppingCart}" var="product"
+                                <cc:forEach id="shoppingCart"
+                                            items="#{productPurchaseJSF.shoppingCart}"
+                                            var="product"
                                             varStatus="metadata">
-                                    <tr class="align-middle">
+                                    <tr class="align-middl ">
                                         <td class="align-middle">#{product.title}</td>
-                                        <td class="align-middle">
-                                            <p:inputNumber inputStyleClass="shadow-none"
-                                                           inputStyle="text-align: right"
-                                                           id="unit_#{product.id.value}"
-                                                           minValue="1"
-                                                           decimalPlaces="0"
-                                                           required="true"
-                                                           emptyValue="1"
-                                                           requiredMessage="#{messageJSF.requiredMassage}"
-                                                           value="#{product.unit}">
-                                            </p:inputNumber>
+                                        <td class="align-middle text-center">
+                                            <h:commandButton value="-" class="btn btn-primary"
+                                                             actionListener="#{productPurchaseJSF.decrement(product.id)}"/>
+                                            <h:outputText id="unit_#{product.id.value}" value="#{product.unit}" class="px-3"/>
+                                            <h:commandButton value="+" class="btn btn-primary"
+                                                             actionListener="#{productPurchaseJSF.increment(product.id)}"/>
                                         </td>
-                                        <td class="align-middle">
+                                        <td class="align-middle text-center">
                                             <h:outputText value="#{product.unitprice}">
                                                 <c:convertNumber minFractionDigits="2"/>
                                             </h:outputText>
                                         </td>
-                                        <td class="align-middle">
+                                        <td class="align-middle text-center">
                                             <h:outputText it="totalprice" value="#{product.totalPrice}">
                                                 <c:convertNumber minFractionDigits="2"/>
                                             </h:outputText>
                                         </td>
-                                        <td>
+                                        <td class="align-middle text-center">
                                             <h:commandButton value="X" class="btn btn-outline-danger"
                                                              actionListener="#{productPurchaseJSF.removeFromShoppingCart(product.id)}"/>
                                         </td>
